<resources>
    <string name="app_name">AEEB</string>
    <string name="button1">Horários</string>
    <string name="button2">Atividades Extracurriculares</string>
    <string name="button3">Ementas</string>
    <string name="button4">Eventos</string>
    <string name="button5">Anúncios</string>
    <string name="button6">Conversas</string>
    <string name="button7">Pautas</string>
    <string name="button8">Faltas</string>
    <string name="button9">Meus Dados</string>
    <string name="personImage">TODO</string>
    <string name="more">menu</string>
    <string name="todo">TODO</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="textview">Aluno: Ana Marisa Rondão</string>
    <string name="button0">Definições</string>
    <string name="voltar">Voltar</string>
    <string name="pai_professor">Aluno/Professor</string>
    <string name="title_activity_atividades_extracur">Atividades Extracurriculares</string>
    <string name="atual">Atual</string>
    <string name="passado">Passado</string>
    <string name="hint">hint</string>
    <string name="texto_anuncio">Texto do anúncio</string>
    <string name="titulo">Título</string>
    <string name="add">add</string>
    <string name="certo">certo</string>
    <string name="Atividade">atividade</string>
    <string name="descriçao">Descrição</string>
    <string name="visitaEstudo">Visita de estudo</string>
    <string name="descriçaovisita">Visita de estudo a uma fábrica de têxtil, assinar folha até ao dia 15/05/2019</string>
    <string name="descri_o">Descrição</string>
    <string name="atividade">Atividade</string>
    <string name="ementaDia">Ementa de almoço - dia 28/05/2019</string>
    <string name="segunda_feira">Segunda-feira</string>
    <string name="ter_a_feira">Terça-feira</string>
    <string name="quarta_feira">Quarta-feira</string>
    <string name="quinta_feira">Quinta-feira</string>
    <string name="sexta_feira">Sexta-feira</string>
    <string name="EstudoMeio">Estudo do meio \n 09:00/11:00  (Sala 3)</string>
    <string name="Matematica">Matemática \n 11:15/13:00  (Sala 2)</string>
    <string name="Portugues">Portugues \n 15:00/17:00  (Sala 3)</string>
    <string name="anuncio1"></string>
    <string name="dataAnuncio1"></string>
    <string name="data_21_05_2019">Data: 28/05/2019</string>
    <string name="tituloAtiv">textView</string>
    <string name="descAtiv">textView</string>
    <string name="dataAtiv">Data: 21/05/2019</string>
    <string name="persona">Ana Marisa Rondão</string>
    <string name="info_pessoal">INFORMAÇÃO PESSOAL</string>
    <string name="evento1">Visita de estudo a Mafra com a turma A e C</string>
    <string name="dataEvento1">Data: 05 junho 2019</string>
    <string name="textview1">TextView</string>
    <string name="evento2">Reunião com pais de todas as turmas</string>
    <string name="dataEvento2">Data: 17 junho 2019</string>
    <string name="hint1" />
    <string-array name="alunos_array">
        <item></item>
        <item>Afonso Dias Coelho</item>
        <item>Ana Marisa Rondão</item>
        <item>Ana Rita Carvalho</item>
        <item>Bruno Souza Moreira</item>
        <item>Carolina Barbosa Ferreira</item>
        <item>Daniel Mota Souza</item>
        <item>Filipa Santos Marques</item>
        <item>Gonçalo André Lima</item>
        <item>João Pedro Paiva</item>
        <item>Juliana Soares Pinho</item>
        <item>Leonardo Filipe Silva</item>
        <item>Mariana Andrade Pinto</item>
        <item>Paula Pinheiro Santos</item>
        <item>Pedro Brandão Lacerda</item>
        <item>Tiago Ferreira Martins</item>
        <item>Vitor Souza Lacerda</item>
    </string-array>
    <string name="aluno">Aluno:</string>
    <string name="data">03/05/2019</string>
    <string name="disciplinas">DISCIPLINAS</string>
    <string name="notas">NOTAS</string>
    <string name="motivo">Motivo</string>
    <string name="comentarios">Comentários</string>
    <string name="btn_faltas">Confirmar</string>
    <string name="alunos">ALUNOS</string>
    <string name="falta">F</string>
    <string name="presenca">P</string>

    <string-array name="turmas">
        <item>Turma A</item>
        <item>Turma B</item>
        <item>Turma C</item>
        <item>Turma D</item>
        <item>Turma E</item>
    </string-array>
</resources>
